CRNT-31729: reverted change of revision 69918. The real fix is to return Long.MAX_VALUE for totalCount if the threshold is exceeded. Additionally the worklist (in this case the UserWorklist) needs to get assigned the configured threshold value.
git-svn-id: https://svn.csa.sungard.com/repos/ipp2/product/branches/b_dev_7_3_x/stardust/engine@70022 8100b5e0-4d52-466c-ae9c-bdeccbdeaf6b